[package]
name = "foro-ruff"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.super-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
panic = "abort"

[dependencies]
anyhow = "1.0.87"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff/", branch = "main", portion = "crates/ruff_python_parser" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff/", branch = "main", portion = "crates/ruff_python_formatter" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff/", branch = "main", portion = "crates/ruff_python_ast" }
ruff_python_trivia = { git = "https://github.com/astral-sh/ruff/", branch = "main", portion = "crates/ruff_python_trivia" }
ruff_workspace = { git = "https://github.com/astral-sh/ruff/", branch = "main", portion = "crates/ruff_workspace" }
ruff_formatter = { git = "https://github.com/astral-sh/ruff/", branch = "main", portion = "crates/ruff_formatter" }
foro-plugin-utils = { git = "https://github.com/nahco314/foro-plugin-utils", version = "0.2.1" }
serde_json = "1.0.127"
