[package]
name = "foro-ruff"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.87"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff/", rev = "dca594f89fe0f892f8f939e09d799d2974a811d7" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff/", rev = "dca594f89fe0f892f8f939e09d799d2974a811d7" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff/", rev = "dca594f89fe0f892f8f939e09d799d2974a811d7" }
ruff_python_trivia = { git = "https://github.com/astral-sh/ruff/", rev = "dca594f89fe0f892f8f939e09d799d2974a811d7" }
ruff_workspace = { git = "https://github.com/astral-sh/ruff/", rev = "dca594f89fe0f892f8f939e09d799d2974a811d7" }
ruff_formatter = { git = "https://github.com/astral-sh/ruff/", rev = "dca594f89fe0f892f8f939e09d799d2974a811d7" }
foro-plugin-utils = { version = "0.2.0", git = "https://github.com/nahco314/foro-plugin-utils" }
serde_json = "1.0.127"

[profile.super-release]
inherits = "release"
opt-level = 3
debug = false
lto = "fat"
panic = "abort"
codegen-units = 1
